@@ -2,6 +2,7 @@ Release notes
 -------------
 
 Date          Version   Comment
+2021/07/12    1.9.1     Support Ionic 5, and fix 3.9 mobile app answer display (contributed by Dani Palou).
 2021/07/08    1.9.0     Add support for new Moodle 3.9 standard instruction flag.
 2021/04/25    1.8.0     Fix Behat tests for new 3.8 question interface (provided by Fabian Batioja), clean up code.
 2021/04/25    1.7.6     Clean up 3.7 code, use 1.7.x for Moodle 3.7 releases.
